--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start": "node server/index.js"
   },
   "dependencies": {
+    "codemirror": "^5.65.2",
     "finalhandler": "^1.1.2",
     "htm": "^3.1.0",
     "preact": "^10.6.6",
